--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': 'token YOUR_GITHUB_TOKEN'
+                    'Authorization': 'token ' + 'NFS_METKA'
                 },
                 body: JSON.stringify({
                     event_type: 'data_collection',
